[gd_scene load_steps=2 format=3 uid="uid://cbg5kgwxusvxf"]

[ext_resource type="Script" path="res://behaviours/cursor_detector.gd" id="1_4hcxj"]

[node name="CursorDetector" type="Area2D"]
collision_layer = 0
collision_mask = 64
monitorable = false
script = ExtResource("1_4hcxj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="cursor_entered" from="." to="." method="_on_cursor_entered"]
[connection signal="cursor_exited" from="." to="." method="_on_cursor_exited"]
